# pbitmtopbm

./: AUTHORS  ChangeLog  Makefile.am  README.md  acinclude.m4  common.c  configure.in  example.pbitm  example.pbm  mkinstalldirs  pbitmtopbm.1.in  pbitmtopbm.c  pbmtopbitm.1.in  pbmtopbitm.c
mine/: common.h  rcs.h
